# learn_claude_code_basic-project

./: .gitignore  README-cn.md  README.md  TICKET.md  mise.toml
.claude/: MENTOR_ROLE.md  TICKET.md  (+1 more)
currency-converter-app/: .gitignore  CLAUDE.md  README-cn.md  README.md  TICKET.md  app-example.py  app-spec.md  mise.toml  pyproject.toml  rates.json
currency-converter-app/.claude/: PROJECT.md  TEACHING.md  TEACHING_GUIDE.md  settings.json  teaching.md
currency-converter-app/.claude/commands/: lesson-smith-all.md  lesson-smith-project.md  lesson-smith-readme.md  lesson-smith-teaching-guide.md  lesson-smith-ticket.md  start-cn.md  start.md
currency-converter-app/.claude/skills/lesson-smith/: SKILL.md
currency-converter-app/.claude/skills/teach-brainstorm/: SKILL.md
currency-converter-app/.claude/skills/teach-brainstorm-cn/: SKILL.md
currency-converter-app/.claude/skills/teach-check/: SKILL.md
currency-converter-app/.claude/skills/teach-debug/: SKILL.md
currency-converter-app/.claude/skills/teach-debug-cn/: SKILL.md
currency-converter-app/.claude/skills/teach-explain-cn/: SKILL.md
currency-converter-app/.claude/skills/teach-start/: SKILL.md
currency-converter-app/.claude/skills/teach-start-cn/: SKILL.md
expense-analyzer/: CLAUDE.md  README-cn.md  README.md  TICKET.md  expense.tsv  mise.toml  pyproject.toml
expense-analyzer/.claude/: TEACHING.md  settings.json
expense-analyzer/.claude/skills/teach-check-cn/: SKILL.md
expense-analyzer/expense_analyzer/: impl.py  impl_example.py
expense-analyzer/tests/: test_impl.py  test_impl_example.py
(+2 files in other folders)
