[project]
name = "currency_converter_app"
version = "0.1.1"
requires-python = ">=3.12,<4.0"
dependencies = [
]

[tool.setuptools.packages.find]
where = ["."]
include = ["currency_converter_app*"]
exclude = [
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
